# mawaqit-calendar

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: validate-PR.yml  vercel-preview.yml  vercel-production.yml  versioning.yaml
data/calendars/2025/: grande_mosquee_de_paris.ics
data/processed/grande-mosquee-de-paris/: mosque_metadata.json  prayer_times_2025.json
scripts/: add_new_prayer_times.py  create_prayer_times_google_calendar.py
src/calendar/: google_calendar.py  ics_generator.py
src/config/: settings.py
src/models/: calendar_config.py  country_enum.py  google_calendar_config.py  mosque.py  prayer_time.py
src/scrapers/: base_scraper.py  mawaqit_scraper.py  url_scraper.py
tests/test_calendar/: test_google_calendar.py  test_ics_generator.py
tests/test_models/: test_mosque.py  test_prayer_time.py
tests/utils/: base_test_case.py  data.py
website/: next.config.ts  package-lock.json  package.json
website/.github/workflows/: deploy.yml
website/public/data/: mosque_metadata.json
website/src/app/: MosqueMap.tsx  globals.css  layout.tsx  page.tsx
website/src/components/: CalendarSubscription.tsx  MosqueCard.tsx  MosqueMap.tsx
website/src/types/: mosque.ts
